Fix bug: Artists/Projects text cutoff on mobile
Adjusted the margin-bottom to allow second lines of text
to show through.

--- a/scss/media-queries.scss
+++ b/scss/media-queries.scss
@@ -31,7 +31,7 @@
     height:100px;
     max-width: none;
     display: inline-block;
-    margin:0 1% 30px 0;
+    margin:0 1% 48px 0;
 
     span{
       left: 0;
